<ScrollView
    android:id="@+id/main_activity_scroll_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
<RelativeLayout
    android:id="@+id/main_activity_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/main_activity_title_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/MyTitleMessage"
            android:focusable="true"
            android:textSize="20sp"
            android:gravity="center"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>
        <Button
            android:id="@+id/button_title_1"
            style="@style/MainListText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/spotify_streamer_title"/>
        <Button
            android:id="@+id/button_title_2"
            style="@style/MainListText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/scores_app_title"/>
        <Button
            android:id="@+id/button_title_3"
            style="@style/MainListText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/library_app_title"/>
        <Button
            android:id="@+id/button_title_4"
            style="@style/MainListText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/build_it_bigger_title"/>
        <Button
            android:id="@+id/button_title_5"
            style="@style/MainListText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/xyz_reader_title"
            />
        <Button
            android:id="@+id/button_title_6"
            style="@style/MainListText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/capstone_my_own_app"
            />
    </LinearLayout>

</RelativeLayout>

</ScrollView>